--- a/build.gradle
+++ b/build.gradle
@@ -9,17 +9,28 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
+    id 'info.solidsoft.pitest' version '1.6.0'  // added for pitest
+    id 'jacoco' // allow code coverage report
 }
 
+group 'Strategy'
 repositories {
     // Use JCenter for resolving dependencies.
     jcenter()
 }
 
+jacoco{
+    toolVersion = "0.8.6"
+}
+
+pitest {
+    junit5PluginVersion = '0.12' // added for pitest
+    mutators = ['DEFAULTS', 'REMOVE_CONDITIONALS']
+}
 dependencies {
     // Use JUnit Jupiter API for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
-
+    testImplementation 'com.approvaltests:approvaltests:10.4.0'
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
@@ -30,7 +41,15 @@ dependencies {
     implementation 'com.google.guava:guava:29.0-jre'
 }
 
-tasks.named('test') {
+test {
     // Use junit platform for unit tests.
     useJUnitPlatform()
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.enabled true
+        csv.enabled true
+    }
 }
