--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 // group 'Strategy'
 repositories {
     // Use JCenter for resolving dependencies.
-    jcenter()
+    mavenCentral()
 }
 
 jacoco{
